Building the C++ packages from scratch (using apt) takes almost 10 minutes each
This is mostly due to apt running the tests. So let's build HEALPix
using my own build script.

--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -1,8 +1,9 @@
 CXX = g++
 CXXFLAGS = -c -Wall -Werror -fpic -Wno-unknown-pragmas
 
-HEALPIX = ../downloads/Healpix_3.20/src/cxx
-INCLUDES = -I$(HEALPIX)/Healpix_cxx -I$(HEALPIX)/cxxsupport
+HEALPIX = ../downloads/Healpix_3.20
+INCLUDES = -I$(HEALPIX)/src/cxx/Healpix_cxx -I$(HEALPIX)/src/cxx/cxxsupport
+LIBRARIES = -L$(HEALPIX)/lib -L$(HEALPIX)/src/cxx/gcc_with_fpic/lib -lhealpix_cxx -lcxxsupport -lsharp -lc_utils -lfftpack
 
 all: libhealpixwrapper.so
 
@@ -10,7 +11,7 @@ transforms.o: transforms.cpp
 	$(CXX) $(CXXFLAGS) transforms.cpp $(INCLUDES)
 
 libhealpixwrapper.so: transforms.o
-	$(CXX) -shared -o libhealpixwrapper.so transforms.o -lhealpix_cxx -lcxxsupport -lsharp -lc_utils -lfftpack
+	$(CXX) -shared -o libhealpixwrapper.so transforms.o $(LIBRARIES)
 
 clean:
 	-rm *.o
