--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ julia:
     - nightly
 notifications:
     email: false
+before_install:
+    - sudo apt-get install libcfitsio3 -y
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia --check-bounds=yes -e "Pkg.clone(pwd()); Pkg.build(\"HEALPix\"); Pkg.test(\"HEALPix\"; coverage=true)"
