--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia --check-bounds=yes -e "Pkg.clone(pwd()); Pkg.build(\"HEALPix\"); Pkg.test(\"HEALPix\"; coverage=true)"
 after_success:
-    - julia -e "cd(Pkg.dir(\"HEALPix\")); Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(Coveralls.process_folder())"
+    - julia -e "cd(Pkg.dir(\"LibHealpix\")); Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
 
