--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -1,8 +1,5 @@
-CXXFLAGS = -c -Wall -Werror -fpic -Wno-unknown-pragmas
-
-HEALPIX = ../downloads/Healpix_3.30
-INCLUDES = -I$(HEALPIX)/src/cxx/Healpix_cxx -I$(HEALPIX)/src/cxx/cxxsupport
-LIBRARIES = -L$(HEALPIX)/lib -L$(HEALPIX)/src/cxx/gcc_with_fpic/lib -lhealpix_cxx -lcxxsupport -lsharp -lc_utils -lfftpack
+CFLAGS  := -c -Wall -Werror -fpic -Wno-unknown-pragmas
+HEALPIX := $(PWD)/../downloads/Healpix_3.30
 
 UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
@@ -12,19 +9,23 @@ ifeq ($(UNAME), Darwin)
 SHARED_LIBRARY = libhealpixwrapper.dylib
 endif
 
+MY_PKG_CONFIG_PATH := $(PWD)/../usr/lib/pkgconfig:$(PKG_CONFIG_PATH)
+PKG_CONFIG_CFLAGS := $(shell PKG_CONFIG_PATH=$(MY_PKG_CONFIG_PATH) pkg-config --cflags chealpix healpix_cxx)
+PKG_CONFIG_LIBS   := $(shell PKG_CONFIG_PATH=$(MY_PKG_CONFIG_PATH) pkg-config --libs   chealpix healpix_cxx)
+
 all: $(SHARED_LIBRARY)
 
 map.o: map.cpp
-	$(CXX) $(CXXFLAGS) map.cpp $(INCLUDES)
+	$(CXX) $(CFLAGS) $(PKG_CONFIG_CFLAGS) map.cpp
 
 alm.o: alm.cpp
-	$(CXX) $(CXXFLAGS) alm.cpp $(INCLUDES)
+	$(CXX) $(CFLAGS) $(PKG_CONFIG_CFLAGS) alm.cpp
 
 transforms.o: transforms.cpp
-	$(CXX) $(CXXFLAGS) transforms.cpp $(INCLUDES)
+	$(CXX) $(CFLAGS) $(PKG_CONFIG_CFLAGS) transforms.cpp
 
 $(SHARED_LIBRARY): map.o alm.o transforms.o
-	$(CXX) -shared -o $(SHARED_LIBRARY) map.o alm.o transforms.o $(LIBRARIES)
+	$(CXX) $(PKG_CONFIG_LIBS) -shared -o $(SHARED_LIBRARY) map.o alm.o transforms.o
 
 clean:
 	-rm *.o
