set -rpath correctly when compiling the wrapper

--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -17,7 +17,8 @@ endif
 # http://stackoverflow.com/questions/18136918/how-to-get-current-relative-directory-of-your-makefile
 
 ROOT_DIR := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
-MY_PKG_CONFIG_PATH := $(ROOT_DIR)/../usr/lib/pkgconfig:$(PKG_CONFIG_PATH)
+LIB_DIR  := $(ROOT_DIR)/../usr/lib
+MY_PKG_CONFIG_PATH := $(LIB_DIR)/pkgconfig:$(PKG_CONFIG_PATH)
 PKG_CONFIG_CFLAGS  := $(shell PKG_CONFIG_PATH=$(MY_PKG_CONFIG_PATH) pkg-config --cflags chealpix healpix_cxx)
 PKG_CONFIG_LIBS    := $(shell PKG_CONFIG_PATH=$(MY_PKG_CONFIG_PATH) pkg-config --libs   chealpix healpix_cxx)
 
@@ -33,7 +34,7 @@ transforms.o: transforms.cpp
 	$(CXX) $(CFLAGS) $(PKG_CONFIG_CFLAGS) transforms.cpp
 
 $(SHARED_LIBRARY): map.o alm.o transforms.o
-	$(CXX) $(PKG_CONFIG_LIBS) -shared -o $(SHARED_LIBRARY) map.o alm.o transforms.o
+	$(CXX) $(PKG_CONFIG_LIBS) -Wl,-rpath,$(LIB_DIR) -shared -o $(SHARED_LIBRARY) map.o alm.o transforms.o
 
 clean:
 	-rm *.o
