--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ julia:
     - 0.6
 notifications:
     email: false
+sudo: false
+dist: trusty
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia -e 'Pkg.clone(pwd()); Pkg.build("LibHealpix")'
