--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ notifications:
     email: false
 sudo: false
 dist: trusty
+addons:
+    apt:
+        packages:
+            - cfitsio-dev
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia -e 'Pkg.clone(pwd()); Pkg.build("LibHealpix")'
