deploy docs from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ script:
     - julia --check-bounds=yes -e 'Pkg.test("LibHealpix"; coverage=true)'
 after_success:
     - julia -e 'cd(Pkg.dir("LibHealpix")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+    - julia -e 'cd(Pkg.dir("LibHealpix")); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
 
