--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
             - libcfitsio3-dev
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.add("FITSIO#master")'
+    - julia -e 'using Pkg; pkg"add FITSIO#master"'
     - julia -e 'Pkg.clone(pwd()); Pkg.build("LibHealpix")'
     - julia --check-bounds=yes -e 'Pkg.test("LibHealpix"; coverage=true)'
 after_success:
